# rcengine

./: .gitignore  AUTHORS  COMMANDS  Makefile.am  README.md  configure.ac
src/: Makefile.am  actions.cpp  btree.cpp  callbacks.cpp  classes.cpp  compound.cpp  confset.cpp  dasm_rete.cpp  eng.cpp  error.cpp  expr.cpp  functions.cpp  keys.cpp  lex.cpp  load.cpp  metaobj.cpp  nodes.cpp  nodes_exec.cpp  patterns.cpp  primit.cpp  rules.cpp  set.cpp  single.cpp  strlow.cpp  syntax.y  utf8str.cpp  vars.cpp
src/hdrs/: actions.hpp  btree.hpp  callbacks.hpp  classes.hpp  codes.h  compound.hpp  config.hpp  confset.hpp  dasm_rete.hpp  dasm_rete_p.hpp  eng.hpp  eng_p.hpp  engine.h  error.hpp  error_p.hpp  expr.hpp  functions.hpp  functions_p.hpp  keys.hpp  lex.hpp  lex_p.hpp  load.hpp  load_p.hpp  mallo.hpp  metaobj.hpp  nodes.hpp  patterns.hpp  primit.hpp  primit_p.hpp  rules.hpp  set.hpp  single.hpp  status.hpp  strlow.hpp  syntax.hpp  utf8str.hpp  vars.hpp
tests/examples/: app_a.i  app_a.r  app_alb.i  app_alb.r  app_ale.i  app_ale.r  app_alek.i  app_alek.r  app_alex.i  app_alex.r  app_arg.i  app_arg.r  app_baena.i  app_baena.r  app_bc.i  app_bc.r  app_bele.r  app_bench.i.NO  app_bench.r  app_bicho.i  app_bicho.r  app_bug1.i  app_bug1.r  app_bug3.i  app_bug3.r  app_bug5.i  app_bug5.r  app_bug6.r  app_bug70.r  app_bugp.i  app_bugp.r  app_caca.i  app_caca.r  app_cesar.i  app_cesar.r  app_co.i  app_co.r  app_comp.r  app_cor.i  app_cor.r  (+161 more)
tests/tester/: Makefile.am  main.cpp  user.cpp
tests/tester/hdrs/: tester.h  user.h
